# workbench

./: .gitignore  COMPETITORS.md  DEV.md  GAPS.md  HARDWARE.md  Makefile  OBSERVATIONS.md  README.md  RELATED-WORK.md  SMOKE.md  USER-CODE.md
.claude/: CLAUDE.md  direction.md  exploration.md  field.md  notes.md  working.md
.githooks/: pre-commit
docs/: agent-light.js  app-menu.js  app.js  aruco.js  assistant-slash.js  assistant-voice.js  assistant-watcher-bridge.js  assistant.js  auth.js  ble-lifecycle.js  camera-frame.js  claude.js  demos.js  detectors.js  dom.js  endpoints.js  error-capture.js  event-bus.js  flasher.js  format.js  index.html  joypad.js  log.js  manifest.json  mediapipe.js  mobile-pip-face.js  mobile.js  motors-calibrate.js  net-probe.js  ops-response.js  pairing.js  passwords.js  phone-helpers.js  phone-screen-mode-plugin.js  phone.html  phones.js  pinout-esp32.js  pinout.js  pip-face-plugin.js  pip-tools.js  (+15 more)
firmware/esp32_robot_idf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ble_host.c  ble_host.h  camera.c  encoders.c  encoders.h  fw_info.c  gatt_svr.c  gatt_svr.h  http_server.c  http_server.h  idf_component.yml  mdns_advertise.c  mdns_advertise.h  motors.c  motors.h  ota.c  ota.h  pair_mailbox.c  pin_config.c  pin_config.h  protocol_constants.h  rgb.c  rgb.h  servo.c  servo.h  snapshot.c  telemetry.c  turn_creds.c  turn_creds.h  uuids.h  webrtc_peer.c  webrtc_peer.h  wifi_sta.c  wifi_sta.h
protocol/: constants.json  uuids.json
public/: agent-light.js  app-menu.js  app.js  aruco.js  assistant-watcher-bridge.js  assistant.js  auth.js  (+55 more)
(+197 files in other folders)
